apps/media/kavita/manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kavita
  labels:
    name: kavita
    app.kubernetes.io/name: kavita
    app.kubernetes.io/part-of: media
