apps/media/kavita/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
  labels:
    app.kubernetes.io/name: kavita
    app.kubernetes.io/part-of: media
spec:
  selector:
    app: kavita
  ports:
    - port: 5000
      targetPort: 5000
      name: http
